@@ -6,8 +6,9 @@ on test => sub {
 };
 
 requires 'Dancer', '1.3123';
-requires 'Catmandu', '>=0.8014';
+requires 'Catmandu', '1.0';
 requires 'Catmandu::Exporter::Template', '0.03';
 requires 'DateTime', '1.08';
+requires 'DateTime::Format::ISO8601', 0;
 requires 'DateTime::Format::Strptime', 0;
 requires 'Clone', '0.36';
